--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="js-TreeView-Config">
             <div class="js-TreeView">
-                TreeView
+                <div id="treeView"></div>
             </div>
             <div class="js-Config">
                 <div id="js_dxScroll">
