--- a/Index.html
+++ b/Index.html
@@ -45,6 +45,10 @@
             <div class="js-Config">
                 <div id="js_dxScroll">
                     <div class="js-dxScroll-content">
+                        <div class="js-config-buttons-decline-confirm boxshadow">
+                            <div class="component" id="button_confirm"></div>
+                            <div class="component" id="button_decline"></div>
+                        </div>
                         <div class="js-config-main-props boxshadow">
                             <div class="component" id="text_name"></div>
                             <div class="component" id="text_description"></div>
