desenv. inclusão de ids.

--- a/Index.html
+++ b/Index.html
@@ -42,10 +42,10 @@
                 <div id="treeView"></div>
             </div>
             <div id="contextMenu"></div>
-            <div class="js-Config">
+            <div class="js-Config" id="js_Config">
                 <div id="js_dxScroll">
                     <div class="js-dxScroll-content">
-                        <div class="js-config-buttons-decline-confirm boxshadow">
+                        <div class="js-config-buttons-decline-confirm boxshadow" id="js_config_buttons_decline_confirm">
                             <div class="component" id="button_confirm"></div>
                             <div class="component" id="button_decline"></div>
                         </div>
