--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
                             <div class="component" id="button_confirm"></div>
                             <div class="component" id="button_decline"></div>
                         </div>
-                        <div class="js-config-main-props boxshadow">
+                        <div class="js-config-main-props boxshadow" id="js_config_main_props">
                             <div class="component" id="text_name"></div>
                             <div class="component" id="text_description"></div>
                             <div class="component" id="select_type"></div>
