--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,13 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <link href="./lib/JsonViewer/json-viewer.css" type="text/css" rel="stylesheet">
 
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="lib/DevExtreme/Lib/js/dx.all.js"></script>
     <script type="text/javascript" src="lib/DevExtreme/Lib/js/localization/dx.messages.pt.js"></script>
+    <script src="./lib/JsonViewer/json-viewer.js"></script>
     <!-- <script type="text/javascript" src="lib/DevExtreme/Lib/js/jquery.contextMenu.min.js"></script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -37,13 +39,17 @@
                 <div class="component" id="button_header_select_version"></div>
             </div>
         </div>
-        <div class="js-TreeView-Config">
-            <div class="js-TreeView">
+        <div class="js-View-Config">
+            <div class="js-View">
+                <div id="tabTreeViewJsonSchema"></div>
+                <div class="scroll" id="jsonRendererContainer" style="display: none;">
+                    <div id="jsonRenderer"></div>
+                </div>
                 <div id="treeView"></div>
             </div>
             <div id="contextMenu"></div>
             <div class="js-Config" id="js_Config">
-                <div id="js_dxScroll">
+                <div class="dxScroll">
                     <div class="js-dxScroll-content">
                         <div class="js-config-buttons-decline-confirm boxshadow" id="js_config_buttons_decline_confirm">
                             <div class="component" id="button_confirm"></div>
@@ -109,11 +115,9 @@
 
     <link rel="stylesheet" href="jsonSchemaLib/css/JsonSchema.css">
     <link rel="stylesheet" href="jsonSchemaLib/css/Components.css">
-    <!-- <script type="text/javascript" src="jsonSchemaLib/js/Components.js"></script> -->
     <script type="module" src="jsonSchemaLib/js/JS_Main.js"></script>
-    <!--  -->
     <script>
-        $("#js_dxScroll").dxScrollView({
+        $(".scroll").dxScrollView({
             direction: 'vertical'
         });
         DevExpress.localization.locale(navigator.language);
