--- a/Index.html
+++ b/Index.html
@@ -13,14 +13,13 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
-    <link href="./lib/JsonViewer/json-viewer.css" type="text/css" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="lib/DevExtreme/Lib/js/dx.all.js"></script>
     <script type="text/javascript" src="lib/DevExtreme/Lib/js/localization/dx.messages.pt.js"></script>
-    <script src="./lib/JsonViewer/json-viewer.js"></script>
-    <!-- <script type="text/javascript" src="lib/DevExtreme/Lib/js/jquery.contextMenu.min.js"></script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -42,13 +41,14 @@
         <div class="js-View-Config">
             <div class="js-View">
                 <div id="tabTreeViewJsonSchema"></div>
-                <div class="scroll" id="jsonRendererContainer" style="display: none;">
-                    <div id="jsonRenderer"></div>
+                <div id="jsonRendererContainer" style="display: none;">
+                    <iframe id="JsonViewerIframe" src="./JsonViewer.html" frameborder="0"
+                        style="width: 100%; height: 100%;"></iframe>
                 </div>
                 <div id="treeView"></div>
             </div>
             <div id="contextMenu"></div>
-            <div class="js-Config" id="js_Config">
+            <div class="js-Config" id="js_Config" style="display: none;">
                 <div class="dxScroll">
                     <div class="js-dxScroll-content">
                         <div class="js-config-buttons-decline-confirm boxshadow" id="js_config_buttons_decline_confirm">
@@ -109,10 +109,7 @@
             </div>
         </div>
     </div>
-
-    <!-- <div id="dxTreeView"></div> -->
     </div>
-
     <link rel="stylesheet" href="jsonSchemaLib/css/JsonSchema.css">
     <link rel="stylesheet" href="jsonSchemaLib/css/Components.css">
     <script type="module" src="jsonSchemaLib/js/JS_Main.js"></script>
