--- a/Index.html
+++ b/Index.html
@@ -48,9 +48,11 @@
                 <div id="treeView"></div>
             </div>
             <div id="contextMenu"></div>
-            <div class="js-Config" id="js_Config" style="display: none;">
+            <div class="js-Config js-Config-show" id="js_Config">
                 <div class="dxScroll">
-                    <div class="js-dxScroll-content">
+                    <div id="btnHide"></div>
+                    <div id="btnShow"></div>
+                    <div id="jsDxScrollContent" class="js-dxScroll-content">
                         <div class="js-config-buttons-decline-confirm boxshadow" id="js_config_buttons_decline_confirm">
                             <div class="component" id="button_confirm"></div>
                             <div class="component" id="button_decline"></div>
