--- a/Index.html
+++ b/Index.html
@@ -95,16 +95,17 @@
     </div>
     </div>
 
+
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="lib/DevExtreme/Lib/css/dx.material.blue.light.css">
     <link rel="stylesheet" href="./jsonSchemaLib/css/JsonSchema.css">
     <link rel="stylesheet" href="./jsonSchemaLib/css/Components.css">
 
     <!-- HOM  -->
-    <script type="module" src="dist/content.js"></script>
+    <!-- <script type="module" src="dist/content.js"></script> -->
 
     <!-- DEV  -->
-    <!-- <script type="module" src="jsonSchemaLib/js/JS_Main.js"></script> -->
+    <script type="module" src="jsonSchemaLib/js/JS_Main.js"></script>
 
 </body>
 
