Melhoria. Adição de propriedades para o tipo objeto.

--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,12 @@
                                 <div class="component" id="checkbox_additional_properties"></div>
                             </div>
                         </div>
+                        <!-- Propriedades para o tipo Object -->
+                        <div class="js-config-object-props boxshadow" id="js_dxBox_config_object_props"
+                            style="display: none;">
+                            <div class="component" id="checkbox_object_pattern_keys"></div>
+                            <div class="component" id="text_object_pattern_keys"></div>
+                        </div>
                         <!-- Propriedades para o tipo Array -->
                         <div class="js-config-array-props boxshadow" id="js_dxBox_config_array_props"
                             style="display: none;">
