--- a/Index.html
+++ b/Index.html
@@ -69,13 +69,31 @@
                         <!-- Propriedades para o tipo String -->
                         <div class="js-config-string-props boxshadow" id="js_dxBox_config_string_props"
                             style="display: none;">
-                            <div class="component" id="checkbox_string_regular_expression"></div>
-                            <div class="component" id="text_string_regular_expression"></div>
+                            <div class="js-config-string-props-regular-expression">
+                                <div class="component" id="checkbox_string_regular_expression"></div>
+                                <div class="component" id="text_string_regular_expression"></div>
+                            </div>
+                            <div class="js-config-string-props-format">
+                                <div class="component" id="checkbox_string_format"></div>
+                                <div class="component" id="select_string_format"></div>
+                            </div>
+
+                            <div class="js-config-string-props-length-less">
+                                <div class="component" id="checkbox_string_length_less"></div>
+                                <div class="component" id="number_string_length_less"></div>
+                            </div>
+                            <div class="js-config-string-props-length-greater">
+                                <div class="component" id="checkbox_string_length_greater"></div>
+                                <div class="component" id="number_string_length_greater"></div>
+                            </div>
                         </div>
                         <!-- Propriedades para o tipo number ou integer -->
                         <div id="js_dxBox_config_numeric_props" class="js-config-numeric-props boxshadow"
                             style="display: none;">
-                            <div class="component" id="checkbox_numeric_range"></div>
+                            <div class="js-config-numeric-props-multiples">
+                                <div class="component" id="checkbox_numeric_multiple"></div>
+                                <div class="component" id="number_numeric_multiple"></div>
+                            </div>
                             <div class="js-config-numeric-props-greater">
                                 <div class="component" id="select_numeric_greater"></div>
                                 <div class="component" id="number_numeric_greater"></div>
