--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="lib/DevExtreme/Lib/css/dx.material.blue.light.css">
+    <link rel="stylesheet" href="./jsonSchemaLib/css/JsonSchema.css">
+    <link rel="stylesheet" href="./jsonSchemaLib/css/Components.css">
     <link rel="stylesheet" href="index.css">
+
 </head>
 
 <body class="dx-viewport">
+    <!-- <div id="Teste">
+        <div class="card">
+            <div class="card-priority priority-1"></div>
+            <div class="card-subject">Report on the State of Engineering Dept</div>
+            <div class="card-assignee">Bart Arnaz</div>
+        </div>
+    </div> -->
     <div class="js-content">
         <div class="js-header">
             <div class="js-header-texts">
@@ -18,6 +30,8 @@
             <div class="js-header-buttons">
                 <div class="component" id="button_header_save_new_version"></div>
                 <div class="component" id="button_header_select_version"></div>
+            </div>
+            <div id="popup_select_version">
             </div>
         </div>
         <div class="js-View-Config">
@@ -108,7 +122,7 @@
                         <!-- Propriedades para o tipo enum -->
                         <div id="js_dxBox_config_enum_props" class="js-config-enum-props boxshadow"
                             style="display: none;">
-                            <div>ENUM</div>
+                            <span style="margin: .5rem;">ENUM</span>
                             <div class="js-config-enum-props-add">
                                 <div id="button_enum_add_value"></div>
                                 <div class="component" id="text_enum_add_value"></div>
@@ -124,9 +138,6 @@
 
 
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
-    <link rel="stylesheet" href="lib/DevExtreme/Lib/css/dx.material.blue.light.css">
-    <link rel="stylesheet" href="./jsonSchemaLib/css/JsonSchema.css">
-    <link rel="stylesheet" href="./jsonSchemaLib/css/Components.css">
 
     <!-- HOM  -->
     <!-- <script type="module" src="dist/content.js"></script> -->
