--- a/Index.html
+++ b/Index.html
@@ -195,6 +195,10 @@
                 "treeContent": result.treeContent
             };
         }
+
+        window.onBtnSaveClick = async (params) => {
+
+        }
     </script>
 
 </body>
