--- a/Index.html
+++ b/Index.html
@@ -68,9 +68,14 @@
                             style="display: none;">
                             <div class="component" id="select_array_type"></div>
                             <div class="js-config-array-props-min-max">
-                                <div class="component" id="checkbox_array_min_max"></div>
-                                <div class="component" id="number_array_min"></div>
-                                <div class="component" id="number_array_max"></div>
+                                <div class="js-config-array-props-min">
+                                    <div class="component" id="checkbox_array_min"></div>
+                                    <div class="component" id="number_array_min"></div>
+                                </div>
+                                <div class="js-config-array-props-max">
+                                    <div class="component" id="checkbox_array_max"></div>
+                                    <div class="component" id="number_array_max"></div>
+                                </div>
                             </div>
                             <div class="component" id="checkbox_array_unique_items"></div>
                         </div>
