--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
             </div>
             <div id="contextMenu"></div>
             <div class="js-Config js-Config-show" id="js_Config">
-                <div class="dxScroll">
+                <div id="dxScroll_config">
                     <div id="btnHide"></div>
                     <div id="btnShow"></div>
                     <div id="jsDxScrollContent" class="js-dxScroll-content">
