--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <link rel="stylesheet" href="lib/DevExtreme/Lib/css/dx.material.blue.light.css">
-    <link rel="stylesheet" href="./jsonSchemaLib/css/JsonSchema.css">
-    <link rel="stylesheet" href="./jsonSchemaLib/css/Components.css">
-    <link rel="stylesheet" href="index.css">
-
 </head>
 
 <body class="dx-viewport">
@@ -30,7 +24,7 @@
             <div class="js-View">
                 <div id="tabTreeViewJsonSchema"></div>
                 <div id="jsonRendererContainer" style="display: none;">
-                    <iframe id="JsonViewerIframe" src="./JsonViewer.html" frameborder="0"
+                    <iframe id="JsonViewerIframe" src="./JsonViewer/JsonViewer.html" frameborder="0"
                         style="width: 100%; height: 100%;"></iframe>
                 </div>
                 <div id="treeView"></div>
@@ -131,16 +125,18 @@
             </div>
         </div>
     </div>
-    </div>
 
+    <!-- <script data-env="prod" type="text/javascript" src="jquery/jquery.min.js"></script>  -->
+    <!-- <script data-env="prod" type="text/javascript" src="./dx/dx.all.js"></script> -->
+    <!-- <script data-env="prod" type="text/javascript" src="./dx/dx.messages.pt.js"></script> -->
+    <!-- <script data-env="prod" type="module" src="content.js"></script> -->
+    <!-- <link data-env="prod" rel="stylesheet" href="content.css"> -->
 
-    <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
-
-    <!-- HOM  -->
-    <!-- <script type="module" src="dist/content.js"></script> -->
-
-    <!-- DEV  -->
-    <script type="module" src="jsonSchemaLib/js/JS_Main.js"></script>
+    <link data-env="dev" rel="stylesheet" href="index.css">
+    <script data-env="dev" type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
+    <script data-env="dev" type="text/javascript" src="./lib/DevExtreme/Lib/js/dx.all.js"></script>
+    <script data-env="dev" type="text/javascript" src="./lib/DevExtreme/Lib/js/localization/dx.messages.pt.js"></script>
+    <script data-env="dev" type="module" src="jsonSchemaLib/js/JS_Main.js"></script>
 
     <script>
         window.popUpVersoesGetContent = async (page, take) => {
